--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="btn-box">
                 <a href="realisation.html" class="btn">Réalisations</a>
-                <a href="#education" class="btn">Mon parcour</a>
+                <a href="#education" class="btn">Mon parcours</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
